mailto link and removed nav items

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
       <div class="nav-content pl3 pl5-ns pt5 pt6-ns f25-s f1-ns">
         <a href="#about" class="dib mb2 nav-item">About</a>
         <a href="#releases" class="dib mb2 nav-item">Releases</a>
-        <a href="#" class="dib mb2 nav-item">Upcoming Shows</a>
-        <a href="#" class="dib mb2 nav-item">Merch - coming soon</a>
-        <a href="#" class="dib mb2 nav-item">Press / Media</a>
+        <!-- <a href="#" class="dib mb2 nav-item">Upcoming Shows</a> -->
+        <!-- <a href="#" class="dib mb2 nav-item">Merch - coming soon</a> -->
+        <!-- <a href="#" class="dib mb2 nav-item">Press / Media</a> -->
         <a href="#contact" class="dib mb2 nav-item">Contact Us</a>
       </div>
       <!-- <div class="nav-hover-overlay"></div> -->
@@ -135,33 +135,38 @@
       <footer id="contact">
         <ul class="flex mw7 justify-between items-center center h-100 pv3 ph2">
           <li>
+            <a href="mailto:castorandpolluxmgmt@gmail.com" target="_blank" rel=”noopener noreferrer”>
+              <i class="fa fa-envelope fa-2x"></i>
+            </a>
+          </li>
+          <li>
             <a href="https://open.spotify.com/artist/6fHUILCpBvfSHB48AEciPG?si=SQQEFDC-RrKzxtKizT5HHg" target="_blank" rel=”noopener noreferrer”>
-              <i class="fa fa-spotify fa-3x"></i>
+              <i class="fa fa-spotify fa-2x"></i>
             </a>
           </li>
           <li>
             <a href="https://soundcloud.com/castorandpollux_music" target="_blank" rel=”noopener noreferrer”>
-              <i class="fa fa-soundcloud fa-3x"></i>
+              <i class="fa fa-soundcloud fa-2x"></i>
             </a>
           </li>
           <li>
             <a href="https://www.facebook.com/candpmusic/" target="_blank" rel=”noopener noreferrer”>
-              <i class="fa fa-facebook-f fa-3x"></i>
+              <i class="fa fa-facebook-f fa-2x"></i>
             </a>
           </li>
           <li>
             <a href="https://www.instagram.com/castorandpolluxmusic/" target="_blank" rel=”noopener noreferrer”>
-              <i class="fa fa-instagram fa-3x"></i>
+              <i class="fa fa-instagram fa-2x"></i>
             </a>
           </li>
           <li>
             <a href="https://twitter.com/candpmusic" target="_blank" rel=”noopener noreferrer”>
-              <i class="fa fa-twitter fa-3x"></i>
+              <i class="fa fa-twitter fa-2x"></i>
             </a>
           </li>
           <li>
-            <a href="https://www.youtube.com/channel/UCJkZIHURVIm7zo7n4kaAWyw" target="_blank" rel=”noopener noreferrer”>
-              <i class="fa fa-youtube fa-3x"></i>
+            <a href="https://www.youtube.com/channel/UCp2BJQiRN36uNGac76eAS6A?view_as=subscriber" target="_blank" rel=”noopener noreferrer”>
+              <i class="fa fa-youtube fa-2x"></i>
             </a>
           </li>
         </ul>
