--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="nav-content pl3 pl5-ns pt5 pt6-ns f25-s f1-ns">
         <a href="#about" class="dib mb2 nav-item">About</a>
         <a href="#releases" class="dib mb2 nav-item">Releases</a>
-        <!-- <a href="#" class="dib mb2 nav-item">Upcoming Shows</a> -->
+        <a href="#shows" class="dib mb2 nav-item">Shows</a>
         <!-- <a href="#" class="dib mb2 nav-item">Merch - coming soon</a> -->
         <!-- <a href="#" class="dib mb2 nav-item">Press / Media</a> -->
         <a href="#contact" class="dib mb2 nav-item">Contact Us</a>
@@ -145,6 +145,17 @@
               <img src="./media/album_art/Drop_Bombs.jpg" alt="Drop Bombs by Castor & Pollux">
             </a>
           </li>
+        </ul>
+      </section>
+      <section id="shows" class="mw7 center pv6 white">
+        <h2 class="f3 mb3">Castor & Pollux coming to a venue near you:</h2>
+        <h3 class="f4 b mb3">2021</h3>
+        <ul class="pl3">
+          <li class="mb2">April 23: Live Stream from the Bowery Electric</li>
+          <li class="mb2">May 28: Bowery Electric</li>
+          <li class="mb2">July 31: The Delancey</li>
+          <li class="mb2">September 18: The Delancey</li>
+          <li>October 9: The Delancey</li>
         </ul>
       </section>
       <footer id="contact">
