--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
         <h2 class="f3 mb3">Castor & Pollux coming to a venue near you:</h2>
         <h3 class="f4 b mb3">2021</h3>
         <ul class="pl3">
-          <li class="mb2">April 23: Live Stream from the Bowery Electric</li>
-          <li class="mb2">May 28: Bowery Electric</li>
+          <li class="mb2">April 23: Live Stream from The Bowery Electric</li>
+          <li class="mb2">May 28: The Bowery Electric</li>
           <li class="mb2">July 31: The Delancey</li>
           <li class="mb2">September 18: The Delancey</li>
           <li>October 9: The Delancey</li>
