--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
         <h3 class="f4 b mb3">2021</h3>
         <ul class="pl3">
           <li class="mb2">April 23: Live Stream from The Bowery Electric</li>
+          <li class="mb2">June 9: Writing on the Wall</li>
+          <li class="mb2">June 18 & 19: The Bowery Electric</li>
+          <li class="mb2">June 25 & 26: The Bowery Electric</li>
           <li class="mb2">May 28: The Bowery Electric</li>
           <li class="mb2">July 31: The Delancey</li>
           <li class="mb2">September 18: The Delancey</li>
