logo rebrand plus shows section update

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <div id="intro" class="dn">
     <div id="introContainer" class="vh-100 w-100 flex justify-center items-center">
-      <img id="introLogo" src="media/Copy of CastorPollux.png" alt="Castor & Pollux"/>
+      <img id="introLogo" src="media/c&p-logo-full.png" alt="Castor & Pollux"/>
       <div id="introTransition"></div>
       <button id="skipIntro" class="white fixed f4">Skip Intro</button>
     </div>
@@ -31,10 +31,10 @@
         <div id="stars2"></div>
         <div id="stars3"></div>
       </div>
-      <img class="mainLogo" src="./media/Copy of CastorPollux.png" alt="Castor & Pollux" />
+      <img class="mainLogo" src="./media/c&p-logo-full.png" alt="Castor & Pollux" />
     </header>
     <div class="topLogo ph2 pv3-ns">
-      <img src="media/c&p-single_line.png" alt="Castor & Pollux"/>
+      <img src="media/c&p-logo-small.png" alt="Castor & Pollux"/>
     </div>
     <button class="hamburgerNav">
       <div class="hambLine firstLine"></div>
@@ -71,140 +71,199 @@
         <h2 class="dn" aria-hidden="false">releases</h2>
         <ul class="flex flex-column items-center releases-list">
           <li id="release-trance-and-energy" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/track/6YZE4tpJu9SuovrjkQvQWL?si=b67c26a3274b47de" target="_blank" rel=”noopener noreferrer”>
+            <a href="https://open.spotify.com/track/6YZE4tpJu9SuovrjkQvQWL?si=b67c26a3274b47de" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/trance_and_energy.jpeg" alt="Trance and Energy by Castor & Pollux">
             </a>
           </li>
           <li id="release-ultron" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/7ACVVHxbPegYMZ84NCdzCI?si=hhNmkSB2QTquOKOoeT6mOg" target="_blank" rel=”noopener noreferrer”>
+            <a href="https://open.spotify.com/album/7ACVVHxbPegYMZ84NCdzCI?si=hhNmkSB2QTquOKOoeT6mOg" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Ultron.jpeg" alt="Ultron by Castor & Pollux">
             </a>
           </li>
           <li id="release-gods_grace" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/track/5t6azd0aqzafqHUFPh0sXN?si=lkuAf8dUSTqpXNlRHEVARQ" target="_blank" rel=”noopener noreferrer”>
+            <a href="https://open.spotify.com/track/5t6azd0aqzafqHUFPh0sXN?si=lkuAf8dUSTqpXNlRHEVARQ" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/GodsGrace.jpg" alt="God's Grace by Castor & Pollux">
             </a>
           </li>
           <li id="release-mystery" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/0JG1QiBcurHqATtlr8NHxs?si=PqjJA1UtSlCLx4YlpH9-PA" target="_blank" rel=”noopener noreferrer”>
+            <a href="https://open.spotify.com/album/0JG1QiBcurHqATtlr8NHxs?si=PqjJA1UtSlCLx4YlpH9-PA" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Mystery.jpg" alt="Myster by Castor & Pollux">
             </a>
           </li>
           <li id="release-we_are_gods" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/3kFtRs3fzQxobz0dsv9Ie8?si=WHW5XabbRYq5I15D0JhZxw" target="_blank" rel=”noopener noreferrer”>
+            <a href="https://open.spotify.com/album/3kFtRs3fzQxobz0dsv9Ie8?si=WHW5XabbRYq5I15D0JhZxw" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/We_Are_Gods_Artwork.jpg" alt="We Are Gods by Castor & Pollux">
             </a>
           </li>
           <li id="release-warzone" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/67jZQiyiYNML594l39bdxP?si=X5osaHJSQvSZJkKkMgFCRA" target="_blank" rel=”noopener noreferrer”>
+            <a href="https://open.spotify.com/album/67jZQiyiYNML594l39bdxP?si=X5osaHJSQvSZJkKkMgFCRA" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/warzone.png" alt="Warzone by Castor & Pollux">
             </a>
           </li>
           <li id="release-your_destiny" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/0zhizxDZ1uyRXynPyZYrWR?si=rjgSu8ICQ9CsUlc99i1anA" target="_blank" rel=”noopener noreferrer”>
+            <a href="https://open.spotify.com/album/0zhizxDZ1uyRXynPyZYrWR?si=rjgSu8ICQ9CsUlc99i1anA" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/your_destiny.jpg" alt="Your Destiny by Castor & Pollux">
             </a>
           </li>
           <li id="release-feel_it_too" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/4yyLYONgySxG8o7VNjv8S2?si=J4T9Whk1TeKwlj3l8PTXSg" target="_blank" rel=”noopener noreferrer”>
+            <a href="https://open.spotify.com/album/4yyLYONgySxG8o7VNjv8S2?si=J4T9Whk1TeKwlj3l8PTXSg" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/FeelitToo.jpg" alt="Feel It Too by Castor & Pollux">
             </a>
           </li>
           <li id="release-enter_the_world" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/70dLWw2aeY5HNJRGZfrxm4?si=8yqo8kYZRzeUtP4N8qsOFg" target="_blank" rel=”noopener noreferrer”>
+            <a href="https://open.spotify.com/album/70dLWw2aeY5HNJRGZfrxm4?si=8yqo8kYZRzeUtP4N8qsOFg" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/EnterTheWorld.jpg" alt="Enter the World by Castor & Pollux">
             </a>
           </li>
           <li id="release-infected" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/1x8eYPRsnKUlZSjlgq4BbM?si=5KmcMlIKTi6VHeafRL3BrQ" target="_blank" rel=”noopener noreferrer”>
+            <a href="https://open.spotify.com/album/1x8eYPRsnKUlZSjlgq4BbM?si=5KmcMlIKTi6VHeafRL3BrQ" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Infected.jpg" alt="Infected by Castor & Pollux">
             </a>
           </li>
           <li id="release-recon" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/7wxGJ17mj9yNYqyiGXIrPt?si=GRfQzNhhT9KHroz-9dr2Mg" target="_blank" rel=”noopener noreferrer”>
+            <a href="https://open.spotify.com/album/7wxGJ17mj9yNYqyiGXIrPt?si=GRfQzNhhT9KHroz-9dr2Mg" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Recon.png" alt="Recon by Castor & Pollux">
             </a>
           </li>
           <li id="release-evade" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/7eAvPccyi8zCdMc4TdGPLZ?si=OAfWyvhBTn2qJT_3lRAGbA" target="_blank" rel=”noopener noreferrer”>
+            <a href="https://open.spotify.com/album/7eAvPccyi8zCdMc4TdGPLZ?si=OAfWyvhBTn2qJT_3lRAGbA" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Evade.png" alt="Evade by Castor & Pollux">
             </a>
           </li>
           <li id="release-fiesta" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/4tQiTP3toiYjhRtCp0dMOX?si=g_Z2DkgZRLiIu-PI-cVQvw" target="_blank" rel=”noopener noreferrer”>
+            <a href="https://open.spotify.com/album/4tQiTP3toiYjhRtCp0dMOX?si=g_Z2DkgZRLiIu-PI-cVQvw" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Fiesta.png" alt="Fiesta by Castor & Pollux">
             </a>
           </li>
           <li id="release-fake_love" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/4YuLLEVasPcpZHCz0Ktzzd?si=wez5NtM-TTeNY4qiRlr-pw" target="_blank" rel=”noopener noreferrer”>
+            <a href="https://open.spotify.com/album/4YuLLEVasPcpZHCz0Ktzzd?si=wez5NtM-TTeNY4qiRlr-pw" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/fakelove.jpg" alt="Fake Love by Castor & Pollux">
             </a>          
           </li>
           <li id="release-predator" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/5VZUNdTcsIlUfwnoeQv6Ii?si=9vpqYZmWTheqg0pWvbhC7g" target="_blank" rel=”noopener noreferrer”>
+            <a href="https://open.spotify.com/album/5VZUNdTcsIlUfwnoeQv6Ii?si=9vpqYZmWTheqg0pWvbhC7g" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Predator.png" alt="Predator by Castor & Pollux">
             </a>
           </li>
           <li id="release-drop_bombs" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/5deFmS4Lc3usCQewL8erSN?si=HM6GTsqKSMmA-xJVpY5ltw" target="_blank" rel=”noopener noreferrer”>
+            <a href="https://open.spotify.com/album/5deFmS4Lc3usCQewL8erSN?si=HM6GTsqKSMmA-xJVpY5ltw" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Drop_Bombs.jpg" alt="Drop Bombs by Castor & Pollux">
             </a>
           </li>
         </ul>
       </section>
-      <section id="shows" class="mw7 center pv6 white">
-        <h2 class="f3 mb3">Castor & Pollux coming to a venue near you:</h2>
-        <h3 class="f4 b mb3">2021</h3>
-        <ul class="pl3">
-          <li class="mb2">April 23: Live Stream from The Bowery Electric</li>
-          <li class="mb2">June 9: Writing on the Wall</li>
-          <li class="mb2">June 18 & 19: The Bowery Electric</li>
-          <li class="mb2">June 25 & 26: The Bowery Electric</li>
-          <li class="mb2">May 28: The Bowery Electric</li>
-          <li class="mb2">July 31: The Delancey</li>
-          <li class="mb2">September 18: The Delancey</li>
-          <li>October 9: The Delancey</li>
+      <section id="shows" class="mw9 ph4 center white ttu i mv5">
+        <div class="dn ph4 pv2 bb bw2 mv1 flex-l items-center justify-between">
+          <p class="w-20">Date</p>
+          <p class="w-50">Venue</p>
+          <p class="w-20">Location</p>
+          <p class="w-10">RSVP</p>
+        </div>
+        <ul class="tc tl-l">
+          <li class="pa4 bt bb mv1 flex-l items-center">
+            <div class="flex-l w-20-l">
+              <h2 class="f2 f1-l fs-normal">Jun<span class="db-l tr-l ml3 ml0-l">18</span></h2>
+              <div class="br ml4 rotate-20 db-l dn"></div>
+            </div>
+            <p class="pv3 f3-l w-50-l">Castor & Pollux @ The Bowery Electric</p>
+            <p class="pv3 f3-l w-20-l">New York, NY</p>
+            <a href="" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+          </li>
+          <li class="pa4 bt bb mv1 flex-l items-center">
+            <div class="flex-l w-20-l">
+              <h2 class="f2 f1-l fs-normal">Jun<span class="db-l tr-l ml3 ml0-l">19</span></h2>
+              <div class="br ml4 rotate-20 db-l dn"></div>
+            </div>
+            <p class="pv3 f3-l w-50-l">Castor & Pollux @ The Bowery Electric</p>
+            <p class="pv3 f3-l w-20-l">New York, NY</p>
+            <a href="" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+          </li>
+          <li class="pa4 bt bb mv1 flex-l items-center">
+            <div class="flex-l w-20-l">
+              <h2 class="f2 f1-l fs-normal">Jun<span class="db-l tr-l ml3 ml0-l">25</span></h2>
+              <div class="br ml4 rotate-20 db-l dn"></div>
+            </div>
+            <p class="pv3 f3-l w-50-l">Castor & Pollux @ The Bowery Electric</p>
+            <p class="pv3 f3-l w-20-l">New York, NY</p>
+            <a href="https://www.bandsintown.com/e/102685455-castor-and-pollux-at-the-bowery-electric?came_from=257&utm_medium=web&utm_source=artist_page&utm_campaign=ticket_rsvp" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+          </li>
+          <li class="pa4 bt bb mv1 flex-l items-center">
+            <div class="flex-l w-20-l">
+              <h2 class="f2 f1-l fs-normal">Jun<span class="db-l tr-l ml3 ml0-l">26</span></h2>
+              <div class="br ml4 rotate-20 db-l dn"></div>
+            </div>
+            <p class="pv3 f3-l w-50-l">Castor & Pollux @ The Bowery Electric</p>
+            <p class="pv3 f3-l w-20-l">New York, NY</p>
+            <a href="https://www.bandsintown.com/e/102685468-castor-and-pollux-at-the-bowery-electric?came_from=257&utm_medium=web&utm_source=artist_page&utm_campaign=ticket_rsvp" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+          </li>
+          <li class="pa4 bt bb mv1 flex-l items-center">
+            <div class="flex-l w-20-l">
+              <h2 class="f2 f1-l fs-normal">Jul<span class="db-l tr-l ml3 ml0-l">4</span></h2>
+              <div class="br ml4 rotate-20 db-l dn"></div>
+            </div>
+            <p class="pv3 f3-l w-50-l">Fourth of July: Fire in the Sky Show @ Top of the Box</p>
+            <p class="pv3 f3-l w-20-l">Brooklyn, NY</p>
+            <a href="https://www.bandsintown.com/e/102688696-castor-and-pollux-at-top-of-the-box-nyc?came_from=257&utm_medium=web&utm_source=artist_page&utm_campaign=event" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+          </li>
+          <li class="pa4 bt bb mv1 flex-l items-center">
+            <div class="flex-l w-20-l">
+              <h2 class="f2 f1-l fs-normal">Jul<span class="db-l tr-l ml3 ml0-l">31</span></h2>
+              <div class="br ml4 rotate-20 db-l dn"></div>
+            </div>
+            <p class="pv3 f3-l w-50-l">Castor & Pollux @ The Delancey</p>
+            <p class="pv3 f3-l w-20-l">New York, NY</p>
+            <a href="https://www.bandsintown.com/e/102685543-castor-and-pollux-at-the-delancey?came_from=257&utm_medium=web&utm_source=artist_page&utm_campaign=event" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+          </li>
+          <li class="pa4 bt bb mv1 flex-l items-center">
+            <div class="flex-l w-20-l">
+              <h2 class="f2 f1-l fs-normal">Aug<span class="db-l tr-l ml3 ml0-l">5-8</span></h2>
+              <div class="br ml4 rotate-20 db-l dn"></div>
+            </div>
+            <p class="pv3 f3-l w-50-l">Twins Days Festival</p>
+            <p class="pv3 f3-l w-20-l">Twinsburgh, OH</p>
+            <a href="/" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+          </li>
         </ul>
       </section>
       <footer id="contact">
         <ul class="flex mw7 justify-between items-center center h-100 pv3 ph2">
           <li>
-            <a href="mailto:castorandpolluxmgmt@gmail.com" target="_blank" rel=”noopener noreferrer”>
+            <a href="mailto:castorandpolluxmgmt@gmail.com" target="_blank" rel="noopener noreferrer">
               <i class="fa fa-envelope fa-2x"></i>
             </a>
           </li>
           <li>
-            <a href="https://open.spotify.com/artist/6fHUILCpBvfSHB48AEciPG?si=SQQEFDC-RrKzxtKizT5HHg" target="_blank" rel=”noopener noreferrer”>
+            <a href="https://open.spotify.com/artist/6fHUILCpBvfSHB48AEciPG?si=SQQEFDC-RrKzxtKizT5HHg" target="_blank" rel="noopener noreferrer">
               <i class="fa fa-spotify fa-2x"></i>
             </a>
           </li>
           <li>
-            <a href="https://soundcloud.com/castorandpollux_music" target="_blank" rel=”noopener noreferrer”>
+            <a href="https://soundcloud.com/castorandpollux_music" target="_blank" rel="noopener noreferrer">
               <i class="fa fa-soundcloud fa-2x"></i>
             </a>
           </li>
           <li>
-            <a href="https://www.facebook.com/candpmusic/" target="_blank" rel=”noopener noreferrer”>
+            <a href="https://www.facebook.com/candpmusic/" target="_blank" rel="noopener noreferrer">
               <i class="fa fa-facebook-f fa-2x"></i>
             </a>
           </li>
           <li>
-            <a href="https://www.instagram.com/castorandpolluxmusic/" target="_blank" rel=”noopener noreferrer”>
+            <a href="https://www.instagram.com/castorandpolluxmusic/" target="_blank" rel="noopener noreferrer">
               <i class="fa fa-instagram fa-2x"></i>
             </a>
           </li>
           <li>
-            <a href="https://twitter.com/candpmusic" target="_blank" rel=”noopener noreferrer”>
+            <a href="https://twitter.com/candpmusic" target="_blank" rel="noopener noreferrer">
               <i class="fa fa-twitter fa-2x"></i>
             </a>
           </li>
           <li>
-            <a href="https://www.youtube.com/channel/UCp2BJQiRN36uNGac76eAS6A?view_as=subscriber" target="_blank" rel=”noopener noreferrer”>
+            <a href="https://www.youtube.com/channel/UCp2BJQiRN36uNGac76eAS6A?view_as=subscriber" target="_blank" rel="noopener noreferrer">
               <i class="fa fa-youtube fa-2x"></i>
             </a>
           </li>
           <li>
-            <a href="https://www.twitch.tv/castorandpolluxmusic" target="_blank" rel=”noopener noreferrer”>
+            <a href="https://www.twitch.tv/castorandpolluxmusic" target="_blank" rel="noopener noreferrer">
               <i class="fa fa-twitch fa-2x"></i>
             </a>
           </li>
