--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             </div>
             <p class="pv3 f3-l w-50-l">Castory & Pollux @ Writing On The Wall</p>
             <p class="pv3 f3-l w-20-l">New York, NY</p>
-            <a href="#" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+            <a href="https://www.bandsintown.com/e/102738195-castor-and-pollux-at-writing-on-the-wall?came_from=257&utm_medium=web&utm_source=artist_page&utm_campaign=ticket_rsvp" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
           </li>
           <li class="pa4 bt bb mv1 flex-l items-center">
             <div class="flex-l w-20-l">
@@ -230,7 +230,7 @@
             </div>
             <p class="pv3 f3-l w-50-l">Twins Days Festival</p>
             <p class="pv3 f3-l w-20-l">Twinsburgh, OH</p>
-            <a href="/" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+            <a href="https://www.bandsintown.com/e/102686964-castor-and-pollux-at-the-bertram-inn-hotel-and-conference-center?came_from=257&utm_medium=web&utm_source=artist_page&utm_campaign=event" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
           </li>
           <li class="pa4 bt bb mv1 flex-l items-center">
             <div class="flex-l w-20-l">
@@ -239,7 +239,7 @@
             </div>
             <p class="pv3 f3-l w-50-l">Castory & Pollux @ The Delancey</p>
             <p class="pv3 f3-l w-20-l">New York, NY</p>
-            <a href="/" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+            <a href="https://www.bandsintown.com/e/102738276-castor-and-pollux-at-the-delancey?came_from=257&utm_medium=web&utm_source=artist_page&utm_campaign=event" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
           </li>
           <li class="pa4 bt bb mv1 flex-l items-center">
             <div class="flex-l w-20-l">
@@ -248,7 +248,7 @@
             </div>
             <p class="pv3 f3-l w-50-l">Castory & Pollux @ The Delancey</p>
             <p class="pv3 f3-l w-20-l">New York, NY</p>
-            <a href="/" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+            <a href="https://www.bandsintown.com/e/102738359-castor-and-pollux-at-the-delancey?came_from=257&utm_medium=web&utm_source=artist_page&utm_campaign=event" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
           </li>
         </ul>
       </section>
