--- a/index.html
+++ b/index.html
@@ -234,6 +234,15 @@
           </li>
           <li class="pa4 bt bb mv1 flex-l items-center">
             <div class="flex-l w-20-l">
+              <h2 class="f2 f1-l fs-normal">Aug<span class="db-l tr-l ml3 ml0-l">18</span></h2>
+              <div class="br ml4 rotate-20 db-l dn"></div>
+            </div>
+            <p class="pv3 f3-l w-50-l">Castory & Pollux @ Writing On The Wall</p>
+            <p class="pv3 f3-l w-20-l">New York, NY</p>
+            <a href="https://www.bandsintown.com/a/84892-castor-and-pollux?came_from=257&utm_medium=web&utm_source=artist_event_page&utm_campaign=artist" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+          </li>
+          <li class="pa4 bt bb mv1 flex-l items-center">
+            <div class="flex-l w-20-l">
               <h2 class="f2 f1-l fs-normal">Sep<span class="db-l tr-l ml3 ml0-l">18</span></h2>
               <div class="br ml4 rotate-20 db-l dn"></div>
             </div>
