--- a/index.html
+++ b/index.html
@@ -71,91 +71,96 @@
         <h2 class="dn" aria-hidden="false">releases</h2>
         <ul class="flex flex-column items-center releases-list">
           <li id="release-tonight" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
+            <a href="https://open.spotify.com/album/5YxnKed6ozPccge0iJK8Su?si=aV51GDq4TNGNmoyB-gjrwA&dl_branch=1" target="_blank" rel="noopener noreferrer">
+              <img src="./media/album_art/cp-eclipse.jpeg" alt="Eclipse by Castor & Pollux">
+            </a>
+          </li>
+          <li id="release-tonight" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/album/6VDBwwjc7gmOmrNal9b2Z6?si=ELu-GN1xR8in4JPbPfeLjA&dl_branch=1" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Electro_Beam.jpg" alt="Electro Beam by Castor & Pollux">
             </a>
           </li>
-          <li id="release-tonight" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+          <li id="release-tonight" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/album/3epoCM8b4uIBjRTgWhDNhC?si=HCwjfWdXQQykK6eZba9org&dl_branch=1" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Tonight.jpeg" alt="Tonight (Castor & Pollux Remix)">
             </a>
           </li>
-          <li id="release-trance-and-energy" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
+          <li id="release-trance-and-energy" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/track/6YZE4tpJu9SuovrjkQvQWL?si=b67c26a3274b47de" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/trance_and_energy.jpeg" alt="Trance and Energy by Castor & Pollux">
             </a>
           </li>
-          <li id="release-ultron" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+          <li id="release-ultron" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/album/7ACVVHxbPegYMZ84NCdzCI?si=hhNmkSB2QTquOKOoeT6mOg" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Ultron.jpeg" alt="Ultron by Castor & Pollux">
             </a>
           </li>
-          <li id="release-gods_grace" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
+          <li id="release-gods_grace" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/track/5t6azd0aqzafqHUFPh0sXN?si=lkuAf8dUSTqpXNlRHEVARQ" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/GodsGrace.jpg" alt="God's Grace by Castor & Pollux">
             </a>
           </li>
-          <li id="release-mystery" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+          <li id="release-mystery" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/album/0JG1QiBcurHqATtlr8NHxs?si=PqjJA1UtSlCLx4YlpH9-PA" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Mystery.jpg" alt="Myster by Castor & Pollux">
             </a>
           </li>
-          <li id="release-we_are_gods" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
+          <li id="release-we_are_gods" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/album/3kFtRs3fzQxobz0dsv9Ie8?si=WHW5XabbRYq5I15D0JhZxw" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/We_Are_Gods_Artwork.jpg" alt="We Are Gods by Castor & Pollux">
             </a>
           </li>
-          <li id="release-warzone" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+          <li id="release-warzone" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/album/67jZQiyiYNML594l39bdxP?si=X5osaHJSQvSZJkKkMgFCRA" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/warzone.png" alt="Warzone by Castor & Pollux">
             </a>
           </li>
-          <li id="release-your_destiny" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
+          <li id="release-your_destiny" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/album/0zhizxDZ1uyRXynPyZYrWR?si=rjgSu8ICQ9CsUlc99i1anA" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/your_destiny.jpg" alt="Your Destiny by Castor & Pollux">
             </a>
           </li>
-          <li id="release-feel_it_too" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+          <li id="release-feel_it_too" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/album/4yyLYONgySxG8o7VNjv8S2?si=J4T9Whk1TeKwlj3l8PTXSg" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/FeelitToo.jpg" alt="Feel It Too by Castor & Pollux">
             </a>
           </li>
-          <li id="release-enter_the_world" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
+          <li id="release-enter_the_world" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/album/70dLWw2aeY5HNJRGZfrxm4?si=8yqo8kYZRzeUtP4N8qsOFg" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/EnterTheWorld.jpg" alt="Enter the World by Castor & Pollux">
             </a>
           </li>
-          <li id="release-infected" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+          <li id="release-infected" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/album/1x8eYPRsnKUlZSjlgq4BbM?si=5KmcMlIKTi6VHeafRL3BrQ" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Infected.jpg" alt="Infected by Castor & Pollux">
             </a>
           </li>
-          <li id="release-recon" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
+          <li id="release-recon" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/album/7wxGJ17mj9yNYqyiGXIrPt?si=GRfQzNhhT9KHroz-9dr2Mg" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Recon.png" alt="Recon by Castor & Pollux">
             </a>
           </li>
-          <li id="release-evade" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+          <li id="release-evade" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/album/7eAvPccyi8zCdMc4TdGPLZ?si=OAfWyvhBTn2qJT_3lRAGbA" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Evade.png" alt="Evade by Castor & Pollux">
             </a>
           </li>
-          <li id="release-fiesta" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
+          <li id="release-fiesta" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/album/4tQiTP3toiYjhRtCp0dMOX?si=g_Z2DkgZRLiIu-PI-cVQvw" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Fiesta.png" alt="Fiesta by Castor & Pollux">
             </a>
           </li>
-          <li id="release-fake_love" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+          <li id="release-fake_love" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/album/4YuLLEVasPcpZHCz0Ktzzd?si=wez5NtM-TTeNY4qiRlr-pw" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/fakelove.jpg" alt="Fake Love by Castor & Pollux">
             </a>          
           </li>
-          <li id="release-predator" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
+          <li id="release-predator" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/album/5VZUNdTcsIlUfwnoeQv6Ii?si=9vpqYZmWTheqg0pWvbhC7g" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Predator.png" alt="Predator by Castor & Pollux">
             </a>
           </li>
-          <li id="release-drop_bombs" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+          <li id="release-drop_bombs" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/album/5deFmS4Lc3usCQewL8erSN?si=HM6GTsqKSMmA-xJVpY5ltw" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Drop_Bombs.jpg" alt="Drop Bombs by Castor & Pollux">
             </a>
@@ -253,12 +258,21 @@
           </li>
           <li class="pa4 bt bb mv1 flex-l items-center">
             <div class="flex-l w-20-l">
+              <h2 class="f2 f1-l fs-normal">Sep<span class="db-l tr-l ml3 ml0-l">16</span></h2>
+              <div class="br ml4 rotate-20 db-l dn"></div>
+            </div>
+            <p class="pv3 f3-l w-50-l">Castory & Pollux @ Writing On The Wall</p>
+            <p class="pv3 f3-l w-20-l">New York, NY</p>
+            <a href="https://www.bandsintown.com/a/84892-castor-and-pollux?came_from=257&utm_medium=web&utm_source=artist_event_page&utm_campaign=artist" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+          </li>
+          <li class="pa4 bt bb mv1 flex-l items-center">
+            <div class="flex-l w-20-l">
               <h2 class="f2 f1-l fs-normal">Sep<span class="db-l tr-l ml3 ml0-l">18</span></h2>
               <div class="br ml4 rotate-20 db-l dn"></div>
             </div>
             <p class="pv3 f3-l w-50-l">Castory & Pollux @ The Delancey</p>
             <p class="pv3 f3-l w-20-l">New York, NY</p>
-            <a href="https://www.bandsintown.com/e/102738276-castor-and-pollux-at-the-delancey?came_from=257&utm_medium=web&utm_source=artist_page&utm_campaign=event" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+            <a href="https://www.bandsintown.com/e/102738276-castor-and-pollux-at-the-delancey?came_from=257&utm_medium=web&utm_source=artist_page&utm_campaign=ticket_rsvp" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
           </li>
           <li class="pa4 bt bb mv1 flex-l items-center">
             <div class="flex-l w-20-l">
@@ -267,7 +281,16 @@
             </div>
             <p class="pv3 f3-l w-50-l">Castory & Pollux @ The Delancey</p>
             <p class="pv3 f3-l w-20-l">New York, NY</p>
-            <a href="https://www.bandsintown.com/e/102738359-castor-and-pollux-at-the-delancey?came_from=257&utm_medium=web&utm_source=artist_page&utm_campaign=event" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+            <a href="https://www.bandsintown.com/e/102738359-castor-and-pollux-at-the-delancey?came_from=257&utm_medium=web&utm_source=artist_page&utm_campaign=ticket_rsvp" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+          </li>
+          <li class="pa4 bt bb mv1 flex-l items-center">
+            <div class="flex-l w-20-l">
+              <h2 class="f2 f1-l fs-normal">Nov<span class="db-l tr-l ml3 ml0-l">5</span></h2>
+              <div class="br ml4 rotate-20 db-l dn"></div>
+            </div>
+            <p class="pv3 f3-l w-50-l">Castory & Pollux @ Mercury Lounge</p>
+            <p class="pv3 f3-l w-20-l">New York, NY</p>
+            <a href="https://www.bandsintown.com/e/102738386-castor-and-pollux-at-live-stream?came_from=257&utm_medium=web&utm_source=artist_page&utm_campaign=ticket_rsvp" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
           </li>
         </ul>
       </section>
