ml show ticket link

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             </div>
             <p class="pv3 f3-l w-50-l">Castory & Pollux @ Mercury Lounge</p>
             <p class="pv3 f3-l w-20-l">New York, NY</p>
-            <a href="https://www.bandsintown.com/e/102738386-castor-and-pollux-at-live-stream?came_from=257&utm_medium=web&utm_source=artist_page&utm_campaign=ticket_rsvp" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+            <a href="https://www.ticketmaster.com/event/00005B14C3CC71B8" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
           </li>
         </ul>
       </section>
