--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
               <h2 class="f2 f1-l fs-normal">Jul<span class="db-l tr-l ml3 ml0-l">21</span></h2>
               <div class="br ml4 rotate-20 db-l dn"></div>
             </div>
-            <p class="pv3 f3-l w-50-l">Castory & Pollux @ Writing On The Wall</p>
+            <p class="pv3 f3-l w-50-l">Castor & Pollux @ Writing On The Wall</p>
             <p class="pv3 f3-l w-20-l">New York, NY</p>
             <a href="https://www.bandsintown.com/e/102738195-castor-and-pollux-at-writing-on-the-wall?came_from=257&utm_medium=web&utm_source=artist_page&utm_campaign=ticket_rsvp" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
           </li>
@@ -252,7 +252,7 @@
               <h2 class="f2 f1-l fs-normal">Aug<span class="db-l tr-l ml3 ml0-l">18</span></h2>
               <div class="br ml4 rotate-20 db-l dn"></div>
             </div>
-            <p class="pv3 f3-l w-50-l">Castory & Pollux @ Writing On The Wall</p>
+            <p class="pv3 f3-l w-50-l">Castor & Pollux @ Writing On The Wall</p>
             <p class="pv3 f3-l w-20-l">New York, NY</p>
             <a href="https://www.bandsintown.com/a/84892-castor-and-pollux?came_from=257&utm_medium=web&utm_source=artist_event_page&utm_campaign=artist" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
           </li>
@@ -261,7 +261,7 @@
               <h2 class="f2 f1-l fs-normal">Sep<span class="db-l tr-l ml3 ml0-l">10</span></h2>
               <div class="br ml4 rotate-20 db-l dn"></div>
             </div>
-            <p class="pv3 f3-l w-50-l">Castory & Pollux @ LAVO Nightclub</p>
+            <p class="pv3 f3-l w-50-l">Castor & Pollux @ LAVO Nightclub</p>
             <p class="pv3 f3-l w-20-l">New York, NY</p>
             <a href="https://nightout.com/events/modernmachines/tickets?_ga=2.47596967.1422775604.1630936436-697003901.1630797237" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
           </li>
@@ -270,7 +270,7 @@
               <h2 class="f2 f1-l fs-normal">Sep<span class="db-l tr-l ml3 ml0-l">16</span></h2>
               <div class="br ml4 rotate-20 db-l dn"></div>
             </div>
-            <p class="pv3 f3-l w-50-l">Castory & Pollux @ Writing On The Wall</p>
+            <p class="pv3 f3-l w-50-l">Castor & Pollux @ Writing On The Wall</p>
             <p class="pv3 f3-l w-20-l">New York, NY</p>
             <a href="https://www.bandsintown.com/a/84892-castor-and-pollux?came_from=257&utm_medium=web&utm_source=artist_event_page&utm_campaign=artist" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
           </li>
@@ -279,7 +279,7 @@
               <h2 class="f2 f1-l fs-normal">Sep<span class="db-l tr-l ml3 ml0-l">18</span></h2>
               <div class="br ml4 rotate-20 db-l dn"></div>
             </div>
-            <p class="pv3 f3-l w-50-l">Castory & Pollux @ The Delancey</p>
+            <p class="pv3 f3-l w-50-l">Castor & Pollux @ The Delancey</p>
             <p class="pv3 f3-l w-20-l">New York, NY</p>
             <a href="https://www.bandsintown.com/e/102738276-castor-and-pollux-at-the-delancey?came_from=257&utm_medium=web&utm_source=artist_page&utm_campaign=ticket_rsvp" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
           </li>
@@ -288,7 +288,7 @@
               <h2 class="f2 f1-l fs-normal">Oct<span class="db-l tr-l ml3 ml0-l">9</span></h2>
               <div class="br ml4 rotate-20 db-l dn"></div>
             </div>
-            <p class="pv3 f3-l w-50-l">Castory & Pollux @ The Delancey</p>
+            <p class="pv3 f3-l w-50-l">Castor & Pollux @ The Delancey</p>
             <p class="pv3 f3-l w-20-l">New York, NY</p>
             <a href="https://www.bandsintown.com/e/102738359-castor-and-pollux-at-the-delancey?came_from=257&utm_medium=web&utm_source=artist_page&utm_campaign=ticket_rsvp" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
           </li>
@@ -297,7 +297,7 @@
               <h2 class="f2 f1-l fs-normal">Nov<span class="db-l tr-l ml3 ml0-l">5</span></h2>
               <div class="br ml4 rotate-20 db-l dn"></div>
             </div>
-            <p class="pv3 f3-l w-50-l">Castory & Pollux @ Mercury Lounge</p>
+            <p class="pv3 f3-l w-50-l">Castor & Pollux @ Mercury Lounge</p>
             <p class="pv3 f3-l w-20-l">New York, NY</p>
             <a href="https://www.ticketmaster.com/event/00005B14C3CC71B8" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
           </li>
