--- a/index.html
+++ b/index.html
@@ -285,12 +285,30 @@
           </li>
           <li class="pa4 bt bb mv1 flex-l items-center">
             <div class="flex-l w-20-l">
+              <h2 class="f2 f1-l fs-normal">Oct<span class="db-l tr-l ml3 ml0-l">2</span></h2>
+              <div class="br ml4 rotate-20 db-l dn"></div>
+            </div>
+            <p class="pv3 f3-l w-50-l">Castor & Pollux @ LAVO Nightclub</p>
+            <p class="pv3 f3-l w-20-l">New York, NY</p>
+            <a href="https://nightout.com/events/modern-machines-nyc/tickets?_ga=2.152186809.1683593542.1632447260-928985868.1631638446" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+          </li>
+          <li class="pa4 bt bb mv1 flex-l items-center">
+            <div class="flex-l w-20-l">
               <h2 class="f2 f1-l fs-normal">Oct<span class="db-l tr-l ml3 ml0-l">9</span></h2>
               <div class="br ml4 rotate-20 db-l dn"></div>
             </div>
             <p class="pv3 f3-l w-50-l">Castor & Pollux @ The Delancey</p>
             <p class="pv3 f3-l w-20-l">New York, NY</p>
             <a href="https://www.bandsintown.com/e/102738359-castor-and-pollux-at-the-delancey?came_from=257&utm_medium=web&utm_source=artist_page&utm_campaign=ticket_rsvp" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+          </li>
+          <li class="pa4 bt bb mv1 flex-l items-center">
+            <div class="flex-l w-20-l">
+              <h2 class="f2 f1-l fs-normal">Oct<span class="db-l tr-l ml3 ml0-l">29</span></h2>
+              <div class="br ml4 rotate-20 db-l dn"></div>
+            </div>
+            <p class="pv3 f3-l w-50-l">Castor & Pollux @ The Paper Box</p>
+            <p class="pv3 f3-l w-20-l">Brooklyn, NY</p>
+            <a href="https://posh.vip/e/forbidden-zombie-apocalypse-ft-dr-phunk?t=castorandpollux" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
           </li>
           <li class="pa4 bt bb mv1 flex-l items-center">
             <div class="flex-l w-20-l">
